added bronze coffer

--- a/dd.htm
+++ b/dd.htm
@@ -12,6 +12,7 @@
             </div>
             <div id="ddFooter">{{selfPos}}</div>
             <!--div id="debug" class="debug"></div-->
+            <!--div id="debug2" class="debug"></div-->
 
             <!--div id="encounter"></div-->
         
