--- a/dd3.htm
+++ b/dd3.htm
@@ -6,13 +6,14 @@
     </head>
     <body>
         <div id="app">
-            <div class="ddHeader" v-bind:class='{passageok:ddManager.currentFloor.passageOk}'>{{ddManager.header}}</div>
-            <div id="canvasWrapper">
+            <!--div class="ddHeader" v-bind:class='{passageok:ddManager.currentFloor.passageOk}'>{{ddManager.header}}</div-->
+            <!--div id="canvasWrapper">
                 <canvas id="canvas"></canvas>
-            </div>
-            <div id="ddFooter">{{selfPos}}</div>
-            <!--div id="debug" class="debug"></div-->
-            <!--div id="debug2" class="debug"></div-->
+            </div-->
+            <!--div id="ddFooter">{{selfPos}}</div-->
+            <div id="debug" class="debug"></div>
+            <div id="traps" class="debug"></div>
+            <div id="debug2" class="debug"></div>
 
             <!--div id="encounter"></div-->
         
