separated boss floor layout

--- a/dd3.htm
+++ b/dd3.htm
@@ -19,7 +19,7 @@
         
         </div>
     </body>
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
     <script src="https://ngld.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
     <script src="modules/Room.js"></script>
     <script src="modules/Passage.js"></script>
