--- a/layout.htm
+++ b/layout.htm
@@ -15,9 +15,13 @@
                 <label class="radio-inline__label" for="item-2">
                     B51-B80(B151-B180)
                 </label>
-                <input id="item-3" class="radio-inline__input" onclick="drawLayout(layout81_100_181_200)" type="radio" name="accessible-radio" value="item-3"/>
+                <input id="item-3" class="radio-inline__input" onclick="drawLayout(layout81_100_181_190)" type="radio" name="accessible-radio" value="item-3"/>
                 <label class="radio-inline__label" for="item-3">
-                    B81-B100(B181-B200)
+                    B81-B100(B181-B190)
+                </label>
+                <input id="item-3" class="radio-inline__input" onclick="drawLayout(layout191_200)" type="radio" name="accessible-radio" value="item-3"/>
+                <label class="radio-inline__label" for="item-4">
+                    B191-B200
                 </label>
                 <input id="item-4" class="radio-inline__input" onclick="drawLayout(layoutExit)" type="radio" name="accessible-radio" value="item-4"/>
                 <label class="radio-inline__label" for="item-4">
